// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalNewsCreateModal /> should render correctly 1`] = `
<Modal
  animation={false}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal--update"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="close.modal"
  >
    <ModalTitle
      bsClass="modal-title"
      className="font-weight-bold"
      componentClass="h4"
    >
      <FormattedMessage
        id="proposal-add-news"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
      post={null}
    />
    <AlertForm
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="primary"
      disabled={true}
      id="confirm-post-create"
      isSubmitting={false}
      label="global.publish"
      onSubmit={[Function]}
    />
  </ModalFooter>
</Modal>
`;

exports[`<ProposalNewsCreateModal /> should render correctly with modal open 1`] = `
<Modal
  animation={false}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogClassName="modal--update"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="close.modal"
  >
    <ModalTitle
      bsClass="modal-title"
      className="font-weight-bold"
      componentClass="h4"
    >
      <FormattedMessage
        id="proposal-add-news"
        values={Object {}}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Connect(ReduxForm)
      onSubmit={[Function]}
      post={null}
    />
    <AlertForm
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      bsStyle="primary"
      disabled={true}
      id="confirm-post-create"
      isSubmitting={false}
      label="global.publish"
      onSubmit={[Function]}
    />
  </ModalFooter>
</Modal>
`;
